Bug 100969 - presentation hangs on slide before slide, which was imported via Import > File
Summary: presentation hangs on slide before slide, which was imported via Import > File
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: All All
: low minor
Assignee: David Tardon
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-07-17 14:53 UTC by Regina Henschel
Modified: 2016-08-01 15:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File to be inserted (11.55 KB, application/vnd.oasis.opendocument.graphics)
2016-07-17 14:53 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-07-17 14:53:50 UTC
Created attachment 126251 [details]
File to be inserted

Start with an empty presentation. Go to Import > File and import the attached odg file. I used the settings "do not delete unused background" and "do not adapt shapes". You should get a first empty slide and second slide with the imported shapes. Immediately start presentation on first slide by clicking on its command icon. Try to go to next slide via mouse click or space bar. Nothing happens.

I see the same problem, in case using an existing presentation.

I have set it to "minor/low" because it will work after you do something and then start presentation again. But nevertheless it indicates, that something is missing, when inserting a file.

It has worked without this problem in LO4.2.
Comment 1 Regina Henschel 2016-07-18 14:45:48 UTC
Immediately saving is not possible. Workaround: Drag the new slide one position back and for.
Comment 2 Thomas Hackert 2016-07-24 14:43:55 UTC
Hello Regina, *,
I can confirm your bug with
OS: Debian Testing AMD64
LO: Version: 5.1.5.1
Build-ID: 1:5.1.5~rc1-1
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: GL; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group
(Debian's own version)

and

Version: 5.2.0.3
Build ID: 7dbd85f5a18cfeaf6801c594fc43a5edadc2df0c
CPU Threads: 4; OS Version: Linux 4.5; UI Render: default; 
Locale: de-DE (de_DE.UTF-8)
(parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux)

so setting "Status" to "New", "Hardware" and OS to "All".
HTH
Thomas
Comment 3 Caolán McNamara 2016-07-25 09:42:26 UTC
This appears to have begun with...

commit 9638e6207c7fc48712b1b238177462c00f5011e8
Author: David Tardon <dtardon@redhat.com>
Date:   Wed Dec 3 22:01:57 2014 +0100
Comment 4 Commit Notification 2016-08-01 15:32:03 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b7b951a90b210bdec5215f2ad09f8a10757a1b2a

tdf#100969 ensure proper update after model change

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.