tdf#100969 ensure proper update after model change

Change-Id: I62836056aeda7497552d60d33fedd9490a6fe545